Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: saayam-demo-svc
  namespace: kube-system
spec:
  selector:
    app: saayam-demo
  ports:
    - protocol: TCP
      port: 80
