deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saayam-demo-dp
  labels:
    app: saayam-demo
  namespace: kube-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: saayam-demo
  template:
    metadata:
      labels:
        app: saayam-demo
    spec:
      containers:
        - name: <your-container-name>
          image: <your-ecr-repo-url>:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
  name: request
spec:
  replicas: 1
  selector:
    matchLabels:
      app: request
  template:
    metadata:
      labels:
        app: request
    spec:
      containers:
        - name: request
          image: request:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: request
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: request
